[package]
name = "rusty-smiler"
version = "0.0.1"
authors = ["my name <>"]
edition = "2021"

[dependencies]
serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
